--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                         <li> <b> [2025-06]</b> I'm delighted to serve
+                           as a PC member for <b>FC'26</b>.</li>
 
                           <li><b>[2025-03]</b> Our paper, "Posterior
                           Security: Anonymity and Message Hiding of
@@ -1533,9 +1535,15 @@ Today,</i> etc.
                                 </a>, Birmingham, United Kingdom, 2015.</li>
                               </ul><br>
                             <li><b>Conference Program Committee Member (Selected recent activities)</b></li>
+                            <b>2026</b>
+                            <ol>
+                              <li>
+                              The 30th International Conference on Financial Cryptography and Data Security <b>(FC)</b>
+                              </li>
+                            </ol>
                             <b>2025</b>
                             <ol>
-                              <li>The USENIX Annual Technical Conference <b>(USENIX ATC)</b></li>
+                              <li>The 50th USENIX Annual Technical Conference <b>(USENIX ATC)</b></li>
                               <li>
                                 The 32nd ACM Conference on Computer and Communications Security <b>(CCS)</b>
                               </li>
@@ -1554,7 +1562,7 @@ Today,</i> etc.
                               <li>
                                 The 31st ACM Conference on Computer and Communications Security <b>(CCS)</b>
                               </li>
-                              <li>The USENIX Annual Technical Conference <b>(USENIX ATC)</b> (ERC)</li>
+                              <li>The 49th USENIX Annual Technical Conference <b>(USENIX ATC)</b> (ERC)</li>
                             </ol>
                             <b>2023</b>
                             <ol>
@@ -1571,95 +1579,95 @@ Today,</i> etc.
                               <!-- <li>The 20th Annual International Conference on Privacy, Security, and Trust <b>(PST)</b></li> -->
                               <li><a href="https://research.protocol.ai/sites/consensusday23/">ConsensusDay</a></li>
                             </ol>
-                            
-                            <!-- <b>2022</b> -->
-                            <!-- <ol> -->
-                            <!--   <li> -->
-                            <!--     The 52nd Annual IEEE/IFIP -->
-                            <!--     International Conference on Dependable -->
-                            <!--     Systems and Networks <b>(DSN)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 4th IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> The 5th IEEE International Conference on Blockchain <b>(Blockchain)</b></li> -->
-                            <!--   <li> -->
-                            <!--     The 5th International Symposium on Foundations and Applications of Blockchain <b>(FAB)</b> -->
-                            <!--   </li> -->
-                            <!--   <li>The 18th International Conference on Mobility, Sensing and Networking <b>(MSN)</b></li> -->
-                            <!--   <li>The 4th International Congress on Blockchain and Applications <b>(BLOCKCHAIN)</b></li> -->
-                            <!--   <\!-- <li>IEEE ICBC Crosschain Workshop <b>(CROSS)</b></li> -\-> -->
-                            <!--   <\!-- <li>Australasian Symposium on Parallel and Distributed Computing <b>(AusPDC)</b></li> -\-> -->
-                            <!--   <li> -->
-                            <!--     The 21st IEEE International Conference -->
-                            <!--     on Trust, Security and Privacy in -->
-                            <!--     Computing and -->
-                            <!--     Communications <b>(TrustCom)</b> </li> -->
-                            <!-- </ol> -->
-                            <!-- <b>2021</b> -->
-                            <!-- <ol> -->
-                            <!--   <li> -->
-                            <!--     The 51st Annual IEEE/IFIP -->
-                            <!--     International Conference on Dependable -->
-                            <!--     Systems and Networks <b>(DSN)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 41st IEEE International Conference -->
-                            <!--     on Distributed Computing -->
-                            <!--     Systems <b>(ICDCS)</b> -->
-                            <!--   </li> -->
 
-                            <!--   <li> -->
-                            <!--   The 25th International Conference on -->
-                            <!--   Financial Cryptography and Data -->
-                            <!--   Security <b>(FC)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 3rd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 4th International Symposium on Foundations and Applications of Blockchain <b>(FAB)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 20th IEEE International Conference on Trust, Security and Privacy in Computing and Communications <b>(TrustCom)</b> </li> -->
-                            <!--   <li> The 17th International Conference on Mobility, Sensing and Networking <b>(MSN)</b></li> -->
-                            <!--   <li> The 4th IEEE International Conference on Blockchain <b>(Blockchain)</b></li> -->
-                            <!--   <li>The 15th International Conference on Network and System Security <b>(NSS)</b></li> -->
-                            <!--   <li> -->
-                            <!--     EAI International Conference on -->
-                            <!--     Blockchain Technology and Emerging -->
-                            <!--     Applications <b>(BlockTEA)</b> -->
-                            <!--   </li> -->
-                            <!-- </ol> -->
-                            <!--   <b>2020</b> -->
-                            <!--   <ol> -->
+                            <b>2022</b>
+                            <ol>
+                              <li>
+                                The 52nd Annual IEEE/IFIP
+                                International Conference on Dependable
+                                Systems and Networks <b>(DSN)</b>
+                              </li>
+                              <li>
+                                The 4th IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
+                              </li>
+                              <li> The 5th IEEE International Conference on Blockchain <b>(Blockchain)</b></li>
+                              <li>
+                                The 5th International Symposium on Foundations and Applications of Blockchain <b>(FAB)</b>
+                              </li>
+                              <!-- <li>The 18th International Conference on Mobility, Sensing and Networking <b>(MSN)</b></li> -->
+                              <li>The 4th International Congress on Blockchain and Applications <b>(BLOCKCHAIN)</b></li>
+                              <!-- <li>IEEE ICBC Crosschain Workshop <b>(CROSS)</b></li> -->
+                              <!-- <li>Australasian Symposium on Parallel and Distributed Computing <b>(AusPDC)</b></li> -->
+                              <!-- <li> -->
+                              <!--   The 21st IEEE International Conference -->
+                              <!--   on Trust, Security and Privacy in -->
+                              <!--   Computing and -->
+                              <!--   Communications <b>(TrustCom)</b> </li> -->
+                            </ol>
+                            <b>2021</b>
+                            <ol>
+                              <li>
+                                The 51st Annual IEEE/IFIP
+                                International Conference on Dependable
+                                Systems and Networks <b>(DSN)</b>
+                              </li>
+                              <li>
+                                The 41st IEEE International Conference
+                                on Distributed Computing
+                                Systems <b>(ICDCS)</b>
+                              </li>
 
-                            <!--   <li> -->
-                            <!--     The 2nd ACM Advances in Financial Technologies <b>(AFT)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 40th IEEE International Conference on Distributed Computing Systems <b>(ICDCS)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 39th IEEE International Symposium -->
-                            <!--     on Reliable Distributed -->
-                            <!--     Systems <b>(SRDS)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 2nd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 54th IEEE International Conference on -->
-                            <!--     Communications <b>(ICC)</b> -->
-                            <!--   </li> -->
-                            <!--   <li> -->
-                            <!--     The 19th IEEE International Conference on Trust, Security and Privacy in Computing and Communications <b>(TrustCom)</b> </li> -->
-                            <!--   <li> -->
-                            <!--     The 25th Australasian Conference on Information Security and Privacy <b>(ACISP)</b> -->
-                            <!--   </li> -->
-                            <!--   <li>The 14th International Conference on Network and System Security <b>(NSS)</b></li> -->
+                              <li>
+                              The 25th International Conference on
+                              Financial Cryptography and Data
+                              Security <b>(FC)</b>
+                              </li>
+                              <li>
+                                The 3rd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
+                              </li>
+                              <li>
+                                The 4th International Symposium on Foundations and Applications of Blockchain <b>(FAB)</b>
+                              </li>
+                              <!-- <li> -->
+                              <!--   The 20th IEEE International Conference on Trust, Security and Privacy in Computing and Communications <b>(TrustCom)</b> </li> -->
+                              <!-- <li> The 17th International Conference on Mobility, Sensing and Networking <b>(MSN)</b></li -->
+                              <li> The 4th IEEE International Conference on Blockchain <b>(Blockchain)</b></li>
+                              <!-- <li>The 15th International Conference on Network and System Security <b>(NSS)</b></li> -->
+                              <li>
+                                EAI International Conference on
+                                Blockchain Technology and Emerging
+                                Applications <b>(BlockTEA)</b>
+                              </li>
+                            </ol>
+                              <b>2020</b>
+                              <ol>
 
-                            <!-- </ol> -->
+                              <li>
+                                The 2nd ACM Advances in Financial Technologies <b>(AFT)</b>
+                              </li>
+                              <li>
+                                The 40th IEEE International Conference on Distributed Computing Systems <b>(ICDCS)</b>
+                              </li>
+                              <li>
+                                The 39th IEEE International Symposium
+                                on Reliable Distributed
+                                Systems <b>(SRDS)</b>
+                              </li>
+                              <li>
+                                The 2nd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
+                              </li>
+                              <li>
+                                The 54th IEEE International Conference on
+                                Communications <b>(ICC)</b>
+                              </li>
+                              <!-- <li> -->
+                              <!--   The 19th IEEE International Conference on Trust, Security and Privacy in Computing and Communications <b>(TrustCom)</b> </li> -->
+                              <!-- <li> -->
+                              <!--   The 25th Australasian Conference on Information Security and Privacy <b>(ACISP)</b> -->
+                              <!-- </li> -->
+                              <!-- <li>The 14th International Conference on Network and System Security <b>(NSS)</b></li> -->
+
+                            </ol>
                             <!-- <b>2019</b> -->
                             <!-- <ol> -->
                             <!--     <li> -->
