--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                          <li> <b> [2025-06]</b> I'm delighted to serve
-                           as a PC member for <b>FC'26</b>.</li>
+                           as a PC member for <i>The 30th
+                           International Conference on Financial
+                           Cryptography and Data Security</i>
+                           (<b>FC'26</b>).</li>
 
                           <li><b>[2025-03]</b> Our paper, "Posterior
                           Security: Anonymity and Message Hiding of
