--- a/index.html
+++ b/index.html
@@ -140,23 +140,24 @@ http://www.templatemo.com/tm-395-urbanic
                       </p>
                 <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
                     <b>About Me</b>
-                        <p> I'm an Associate Professor at the
-                           University of Sydney, serving as the
-                           Director of University Collaboration and
-                           the Director of the
+                        <p> I'm an Associate Professor at the School
+                           of Computer Science, University of Sydney,
+                           serving as the Director of University
+                           Collaboration and the Director of the
                            <a href=https://usyd-desci.github.io/>Sydney
-                           Blockchain Centre</a>. I'm also an elected
-                           member of
-                           the <a href="https://www.dependability.org/?page_id=265">International
-                           Federation for Information Processing
-                           (IFIP) Working Group 10.4 on Dependable
-                           Computing and Fault Tolerance</a>. I also
-                           serve as
+                           Blockchain Centre</a>. I'm
                            the <a href="https://www.acs.org.au/governance/ifip-working-group/ifip-working-group-extended.html">
-                           Australian Representative</a> for IFIP
+                           Australian Representative</a> for
+                           International Federation for Information
+                           Processing
+                           (<a href="https://en.wikipedia.org/wiki/International_Federation_for_Information_Processing">IFIP</a>)
                            Technical Committee 10 on Computer Systems
                            Technology, elected by the Australian
-                           Computer Society (ACS). </p>
+                           Computer Society (ACS). I'm an elected
+                           member of
+                           the <a href="https://www.dependability.org/?page_id=265">IFIP
+                           Working Group 10.4 on Dependable Computing
+                           and Fault Tolerance</a>. </p>
 
                           <p> I'm a recipient of
                               multiple <a href="#templatemo-Awards">
@@ -996,8 +997,6 @@ Today,</i> etc.
             <li>Dongkun Hou (May. 2023-), Monash University. <!-- (Co-supervised with Dr. Shujie Cui and Prof. Joseph Liu) --></li>
             <li>Jun Zhao (May. 2022-), Monash University. <!-- (Co-supervised with Prof. Joseph Liu and A/Prof. Xingliang Yuan) --></li>
             <!-- <li>Dabao Wang (Jan. 2022-), Monash University. (Co-supervised with Xingliang Yuan)</li> -->
-            <li>Peter Ince (Aug. 2021-), Monash University. <!-- (Co-supervised with Prof. Joseph Liu and Dr. Xiaoning Du) --></li>
-            <li>Sina Aeeneh (July 2020-), Monash University. <!-- (Faculty of Engineering, Co-supervised with Prof. Nikola Zlatanov) --></li>
           </ol></font>
 
           <br>
@@ -1009,7 +1008,9 @@ Today,</i> etc.
           </ol>
           <b>PhD</b><br>
           <ol type="circle">
+            <li>Peter Ince (2021-2025), Monash University. <br> (First job: Founder, Sigil Labs.)</li>
             <li>Zoey Ziyi Li (2021-2024), Monash University. <br> (First job: Lecturer, University of Melbourne.)</li>
+            <li>Sina Aeeneh (2020-2024), Monash University. <br> (First job: Engineer, V/Line.)</li>
             <li>Shange Fu (2019-2024), Monash University. <br> (First job: Head of Research, APRO Research)</li>
             <li>Joao Otavio Massari Chervinski (2019-2023), Monash University. <br> (First job: Researcher at Informal Systems.)</li>
             <li>Chaochen Shi (2020-2023), Deakin University. <br> (First job: Postdoc at HK Poly University.)</li>
