--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@ Today,</i> etc.
                               <!-- <a href="doc/publication.html">[Full list]</a> &nbsp; -->
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
-                            <br> <b>[<a href="doc/Breaking_Blockchain_Availability.pdf">Under Ethical discloser</a>]</b> We
+                            <br> <b>[<a href="doc/Breaking_Blockchain_Availability.pdf">Under Ethical Disclosure</a>]</b> We
                             identified severe attacks capable of
                             disrupting or taking down major
                             blockchains' p2p network.
