--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ http://www.templatemo.com/tm-395-urbanic
         <link rel="shortcut icon" href="images/yu.png">
 
         <!-- Google Web Font Embed -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
         
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.css" rel='stylesheet' type='text/css'>
@@ -128,16 +128,17 @@ http://www.templatemo.com/tm-395-urbanic
                       </div>
                       <div class="clearfix"></div>
                       </div>
-                      <p> <font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
+                      <p> <font size="5"> <b>Dr. Jiangshan Yu (于江山)</b></font></p>
 
-                      <p><b><a href="https://en.wikipedia.org/wiki/Associate_professor">
+                      <p><font size="4"><b><a href="https://en.wikipedia.org/wiki/Associate_professor">
                             Associate Professor</a>
+                          <br> Director, <a href=https://usyd-desci.github.io/>Sydney Blockchain Centre</a>
+                          <br> Director, University Collaboration
                           <br> Elected Member, IFIP Working Group 10.4
                           <br> Australian Representative, IFIP TC 10
                           <!--  <br> Advisory Board, Austrian Blockchain Center -->
                           <br><br>
-                    </font></b>
-                      </p>
+                      </font></b></p>
                 <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
                     <b>About Me</b>
                         <p> I'm an Associate Professor at the School
@@ -215,16 +216,14 @@ http://www.templatemo.com/tm-395-urbanic
                       and security protocols.</p>
                       <b>Adoption and Impact</b>
                       <p>My work has identified and mitigated critical
-                      vulnerabilities in widely deployed blockchain
-                      protocols. These findings have been adopted by
-                      major blockchain platforms — with a combined
-                      market capitalisation exceeding $30 billion — to
-                      enhance security and performance. My research
-                      has also been adopted by governments in
-                      advancing digital transformation, and has
-                      contributed to cybercrime investigations,
-                      supporting research-informed decision-making in
-                      practice.
+                      vulnerabilities in widely deployed
+                      blockchains. These findings have been adopted by
+                      major blockchain platforms to improve their
+                      resilience and performance. My research has also
+                      been adopted by governments in advancing digital
+                      transformation, and has contributed to
+                      cybercrime investigations, supporting
+                      research-informed policy-making in practice.
                       </p>
                           <br><br>
 
@@ -2039,6 +2038,7 @@ Today,</i> etc.
         <script src="js/stickUp.min.js"  type="text/javascript"></script>
         <script src="js/colorbox/jquery.colorbox-min.js"  type="text/javascript"></script>
         <script src="js/templatemo_script.js"  type="text/javascript"></script>
+        
         <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
