--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@ http://www.templatemo.com/tm-395-urbanic
                       Lecturer</a>
                       and <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
                       Senior Lecturer</a> at Monash University, where
-                      I was also elected as a 2023 Monash Research
-                      Talent Accelerator (RTA) Fellow. </p>
+                      I served as Research Director of the Monash
+                      Blockchain Technology Centre, and was elected as
+                      a 2023 Monash Research Talent Accelerator (RTA)
+                      Fellow. </p>
                       <b>What I Work On</b>
                       <p>My <a href="#templatemo-Research">research</a>
                       addresses real-world challenges in building
@@ -214,15 +216,19 @@ http://www.templatemo.com/tm-395-urbanic
                       infrastructures by leveraging dependable
                       computing, decentralised systems, cryptography,
                       and security protocols.</p>
-                      <b>Adoption and Impact</b>
-                      <p>My work has identified and mitigated critical
-                      vulnerabilities in widely deployed
-                      blockchains. These findings have been adopted by
-                      major blockchain platforms to improve their
-                      resilience and performance. My research has also
-                      been adopted by governments in advancing digital
-                      transformation, and has contributed to
-                      cybercrime investigations, supporting
+
+                      <b>Impact</b>
+                      <p>My research has advanced the resilience and
+                      performance of blockchain systems and services,
+                      with findings adopted by major blockchains such
+                      as Ethereum, Monero, Nervos, and NEO. I have also
+                      developed security protocols adopted by exchanges
+                      and wallet services to better protect their user
+                      assets.
+
+                      Beyond industry impact, my work has supported
+                      governments in advancing digital transformation
+                      and cybercrime investigations, contributing to
                       research-informed policy-making in practice.
                       </p>
                           <br><br>
