--- a/index.html
+++ b/index.html
@@ -986,7 +986,6 @@ Today,</i> etc.
         <!--         </div> -->
         <!-- <br> -->
 <div class="col-lg-offset-0">
-  <font size="5"><b>Research Areas:</b></font><br><br>
           <font size="5"><b>PhD students:</b></font><br><br>
           <font size="4">
             <b>Main supervision</b><br>
@@ -1669,10 +1668,10 @@ Today,</i> etc.
                               <li>
                                 The 2nd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
                               </li>
-                              <li>
-                                The 54th IEEE International Conference on
-                                Communications <b>(ICC)</b>
-                              </li>
+                              <!-- <li> -->
+                              <!--   The 54th IEEE International Conference on -->
+                              <!--   Communications <b>(ICC)</b> -->
+                              <!-- </li> -->
                               <!-- <li> -->
                               <!--   The 19th IEEE International Conference on Trust, Security and Privacy in Computing and Communications <b>(TrustCom)</b> </li> -->
                               <!-- <li> -->
