--- a/index.html
+++ b/index.html
@@ -252,6 +252,10 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+			  <li> <b> [2025-08]</b> I'm delighted to
+                           serve as a PC member for <i>The 35th
+                           USENIX Security Symposium</i>
+                           (<b>USENIX Security'26</b>).</li>
                          <li> <b> [2025-06]</b> I'm delighted to serve
                            as a PC member for <i>The 30th
                            International Conference on Financial
@@ -1549,6 +1553,9 @@ Today,</i> etc.
                             <li><b>Conference Program Committee Member (Selected recent activities)</b></li>
                             <b>2026</b>
                             <ol>
+			      <li>
+				The 35th USENIX Security Symposium <b>(USENIX Security)</b>
+			      </li>
                               <li>
                               The 30th International Conference on Financial Cryptography and Data Security <b>(FC)</b>
                               </li>
@@ -1576,6 +1583,7 @@ Today,</i> etc.
                               </li>
                               <li>The 49th USENIX Annual Technical Conference <b>(USENIX ATC)</b> (ERC)</li>
                             </ol>
+			    
                             <b>2023</b>
                             <ol>
                               <li>
@@ -1591,7 +1599,8 @@ Today,</i> etc.
                               <!-- <li>The 20th Annual International Conference on Privacy, Security, and Trust <b>(PST)</b></li> -->
                               <li><a href="https://research.protocol.ai/sites/consensusday23/">ConsensusDay</a></li>
                             </ol>
-
+<div style="display: none;">
+				
                             <b>2022</b>
                             <ol>
                               <li>
@@ -1616,6 +1625,7 @@ Today,</i> etc.
                               <!--   Computing and -->
                               <!--   Communications <b>(TrustCom)</b> </li> -->
                             </ol>
+
                             <b>2021</b>
                             <ol>
                               <li>
@@ -1679,7 +1689,7 @@ Today,</i> etc.
                               <!-- </li> -->
                               <!-- <li>The 14th International Conference on Network and System Security <b>(NSS)</b></li> -->
 
-                            </ol>
+                              </ol>
                             <!-- <b>2019</b> -->
                             <!-- <ol> -->
                             <!--     <li> -->
@@ -1834,7 +1844,8 @@ Today,</i> etc.
 	                    <!--     <br> -->
 	                    <!--   </ul> -->
 	                    <!-- </li> -->
-</font>
+</div>
+		    </font>
         </div>
                     <!-- <br class="clearfix"/> -->
                 </div>
