--- a/index.html
+++ b/index.html
@@ -1521,8 +1521,10 @@ Today,</i> etc.
                                 </li>
                             </ul><br>
 
-                            <li><b>Conference (Co-)Chair</b></li>
+                            <li><b>Conference (Co-)Chair (Selected recent activities)</b></li>
                             <ul type="circle">
+                              <li> Demo Chair. The 8th IEEE International Conference on Blockchain and Cryptocurrency (ICBC), 2026.</li>
+                              <li> Track Chair. The 1st IEEE International Conference on Distributed Ledger Technologies (ICDLT), 2025.</li>
                               <li> Publicity Co-Chair. The 54th
                                 IEEE/IFIP International Conference on
                                 Dependable Systems and Networks (DSN),
@@ -1530,15 +1532,15 @@ Today,</i> etc.
                               <li> PC Co-Chair and General Co-Chair,
                                 83rd Meeting of the IFIP WG 10.4 - the
                                 Future of Blockchains, 2023.</li>
-                              <li> Publication Co-Chair, BlockSys 2023.</li>
-                              <li> Publicity Co-Chair, EAI BlockTEA 2022.</li>
-                              <li> Publicity Co-Chair, IEEE Blockchain 2021.</li>
+                              <!-- <li> Publication Co-Chair, BlockSys 2023.</li> -->
+                              <!-- <li> Publicity Co-Chair, EAI BlockTEA 2022.</li> -->
+                              <!-- <li> Publicity Co-Chair, IEEE Blockchain 2021.</li> -->
                               <li> PC Co-Chair, Workshop on Blockchain
                                 Security, Application, and Performance
                                 (BSAP), IEEE Blockchain 2021.</li>
-                              <li> Publicity Co-Chair, IEEE GreenCom 2021.</li>
-                              <li> Publicity Co-Chair, EAI BlockTEA 2021.</li>
-                              <li> Publication Chair, ProvSec 2019.</li>
+                              <!-- <li> Publicity Co-Chair, IEEE GreenCom 2021.</li> -->
+                              <!-- <li> Publicity Co-Chair, EAI BlockTEA 2021.</li> -->
+                              <!-- <li> Publication Chair, ProvSec 2019.</li> -->
                               <li> PC Co-Chair,
                                 <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th
                                 Meeting of the IFIP WG 10.4 -
