--- a/index.html
+++ b/index.html
@@ -252,15 +252,14 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2025-08]</b> I'm delighted to
+                            serve as a PC member for <b>ACM CCS'26</b>.
+                              </li>
 			  <li> <b> [2025-08]</b> I'm delighted to
-                           serve as a PC member for <i>The 35th
-                           USENIX Security Symposium</i>
-                           (<b>USENIX Security'26</b>).</li>
+                           serve as a PC member for <b>USENIX
+                           Security'26</b>.</li>
                          <li> <b> [2025-06]</b> I'm delighted to serve
-                           as a PC member for <i>The 30th
-                           International Conference on Financial
-                           Cryptography and Data Security</i>
-                           (<b>FC'26</b>).</li>
+                           as a PC member for <b>FC'26</b>.</li>
 
                           <li><b>[2025-03]</b> Our paper, "Posterior
                           Security: Anonymity and Message Hiding of
@@ -897,6 +896,13 @@ Today,</i> etc.
                             <br> <b>[IEEE ICDE'23]</b> "TxAllo: Dynamic Transaction Allocation in Sharded Blockchain Systems"
                             <br> <b>[ACM computing surveys'23]</b> "A Survey on Exotic Signatures for Post-Quantum Blockchain: Challenges & Research Directions"
                             <br> <b>[ACM EuroSys'22]</b> "DAMYSUS: Streamlined BFT Consensus Leveraging Trusted Components"
+                            <br><br>
+
+                            <b>Recent Conference Program Committee</b> (More <a href="#templatemo-Services">Services</a>)
+
+                            <br><b>[2026]</b> ACM CCS, USENIX Security, FC
+                            <br><b>[2025]</b> ACM CCS, USENIX ATC, WWW, DSN
+                            <br><b>[2024]</b> ACM CCS, USENIX ATC, VLDB
                             <br><br>
 
                             <b>Media Appearance</b>
@@ -1555,6 +1561,9 @@ Today,</i> etc.
                             <li><b>Conference Program Committee Member (Selected recent activities)</b></li>
                             <b>2026</b>
                             <ol>
+                              <li>
+                                The 33rd ACM Conference on Computer and Communications Security <b>(CCS)</b>
+                              </li>
 			      <li>
 				The 35th USENIX Security Symposium <b>(USENIX Security)</b>
 			      </li>
