--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ http://www.templatemo.com/tm-395-urbanic
                             of top-tier dependability and blockchain
                             conferences, including <i>ACM
                             CCS</i>, <i>USENIX
+                            Security</i>, <i>USENIX
                             ATC</i>, <i>VLDB</i>, <i>DSN</i>, <i>ICDCS</i>, <i>FC</i>,
                             and <i>AFT</i>.
 
