--- a/index.html
+++ b/index.html
@@ -876,10 +876,10 @@ Today,</i> etc.
                               <!-- <a href="doc/publication.html">[Full list]</a> &nbsp; -->
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
-                            <br> <b>[<a href="doc/Breaking_Blockchain_Availability.pdf">Under Ethical Disclosure</a>]</b> We
-                            identified severe attacks capable of
-                            disrupting or taking down major
-                            blockchains' p2p network.
+                            <!-- <br> <b>[<a href="doc/Breaking_Blockchain_Availability.pdf">Under Ethical Disclosure</a>]</b> We -->
+                            <!-- identified severe attacks capable of -->
+                            <!-- disrupting or taking down major -->
+                            <!-- blockchains' p2p network. -->
                             <br> <b>[ACM CCS'25]</b> "Posterior Security: Anonymity and Message Hiding of Standard  Signatures"
                             <br> <b>[IEEE ICDCS'25]</b> "Mosaic: Client-driven Account Allocation Framework in Sharded Blockchains"
                             <br> <b>[IEEE S&P'25]</b> "Constant latency and finality for dynamically available DAG"
